--- a/src/app/add-item-form/add-item-form.component.html
+++ b/src/app/add-item-form/add-item-form.component.html
@@ -1,18 +1,24 @@
-<form >
+<form #itemForm="ngForm" (ngSubmit)="onSubmit(itemForm)">
     <div class="field is-horizontal">
         <div class="field-body">
             <div class="field is-narrow">
                 <p class="control">
-                    <input type="number" style="width: 100px;" class="input" placeholder="Amount">
+                    <input type="number" name="amount" style="width: 100px;" class="input"
+                     placeholder="Amount" 
+                    [ngModel]="item.amount"
+                    required>
                 </p>
             </div>
             <div class="field">
                 <p class="control">
-                    <input type="text"  class="input" placeholder="Description">
+                    <input type="text" name="description"  class="input" placeholder="Description"
+                    [ngModel]="item.description"
+                    required>
                 </p>
             </div>
             <div class="field">
-                <button class="button is-primary is-narrow">ADD</button>
+                <button type="submit" class="button is-primary is-narrow"
+                [disabled]="!itemForm.valid">ADD</button>
             </div>
         </div>
     </div>
