--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,9 +8,9 @@
 
 <section class="add-item-section">
     <div class="add-item-container">
-        <app-add-item-form style="padding: 30px;"></app-add-item-form>
+        <app-add-item-form style="padding: 30px;" (formSubmit)="addItem($event)"></app-add-item-form>
     </div>
 </section>
 <hr style="margin-top:0; background-color: rgb(214, 180, 247);"> 
 
-<app-budget-item-list></app-budget-item-list>
+<app-budget-item-list [budgetItems]="budgetItems" (delete)="deleteItem($event)"></app-budget-item-list>
