--- a/src/app/budget-item-list/budget-item-list.component.html
+++ b/src/app/budget-item-list/budget-item-list.component.html
@@ -6,7 +6,7 @@
         <div *ngFor="let item of budgetItems">
           <app-budget-item-card *ngIf="item.amount >= 0" [item]="item" style="display:block; 
           margin-bottom: 20px;"
-          (xButtonClick)="onDeleteButton(item)">
+          (xButtonClick)="onDeleteButton(item)" (cardClick)="onCardClick(item)">
           </app-budget-item-card>
 
         </div>
@@ -18,7 +18,7 @@
         <div *ngFor="let item of budgetItems">
           <app-budget-item-card *ngIf="item.amount < 0" [item]="item" style="display:block; 
           margin-bottom: 20px;"
-          (xButtonClick)="onDeleteButton(item)">
+          (xButtonClick)="onDeleteButton(item)" (cardClick)="onCardClick(item)">
           </app-budget-item-card>
 
         </div>
