--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,9 +2,12 @@
 
 @import 'main-styles.scss';
 @import '../node_modules/bulma/bulma.sass';
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 body{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
